# squad-projects

./: .env  .env.example  CHECKLIST_DEPLOY_STACK_GIT.md  Changelog.md  Dockerfile  Makefile  README.md  SETUP.md  django.yml  docker-compose.development.yml  docker-compose.override.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  docker-entrypoint.sh  hello.py  pyproject.toml  requirements.txt
apps/clients_suppliers/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
apps/contracts/: admin.py  forms.py  models.py  urls.py  views.py
apps/manager/: admin.py  apps.py  context_processors.py  forms.py  mixins.py  models.py  urls.py  version.py  views.py  views_old.py
apps/projects/: admin.py  forms.py  models.py  urls.py  views.py
apps/tasks/: forms.py  models.py  urls.py  views.py
config/nginx/: gestao.conf
core/: settings.py  urls.py
core/settings/: __init__.py  base.py  development.py  production.py  staging.py
scripts/: deploy.sh  init-project.sh  run-local.sh
static/css/: chronos-theme.css  style.css
static/js/: dialog.js  task-dialog.js  task-toggle.js  toast-manager.js
templates/base/: base.html  modal.html
templates/clients_suppliers/: contact_confirm_delete.html  contact_form.html  party_confirm_delete.html  party_detail.html  party_form.html  party_list.html
templates/contracts/: contract_confirm_delete.html  contract_detail.html  contract_form.html  contract_form_old.html  contract_list.html
templates/manager/: about.html  dashboard.html  dashboard_client_view.html  dashboard_executive.html  (+6 more)
(+42 files in other folders)
