[project]
name = "squad-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-environ>=0.12.0",
    "django>=5.2.1",
    "psycopg2>=2.9.10",
    "djangorestframework>=3.16.0",
    "psycopg2-binary>=2.9.10",
    "django-widget-tweaks>=1.5.0",
]
